# internal/domain/app/repo/db/model/select.go
@@ -11,6 +11,7 @@ type Select struct {
 	CreatedAt   time.Time
 	UpdatedAt   time.Time
 	Active      bool
+	Namespace   string
 	Name        string
 	Description string
 }
@@ -21,6 +22,7 @@ func (m *Select) ListColumnMap() map[string]any {
 		"created_at":  &m.CreatedAt,
 		"updated_at":  &m.UpdatedAt,
 		"active":      &m.Active,
+		"namespace":   &m.Namespace,
 		"name":        &m.Name,
 		"description": &m.Description,
 	}
@@ -42,6 +44,7 @@ func EncodeSelect(v *Select, _ int) *domainModel.Main {
 		CreatedAt:   v.CreatedAt,
 		UpdatedAt:   v.UpdatedAt,
 		Active:      v.Active,
+		Namespace:   v.Namespace,
 		Name:        v.Name,
 		Description: v.Description,
 	}
